--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <div class="hidden w-full md:block md:w-auto gap-3" id="navbar-default">
       <ul class="font-medium flex flex-col gap-3 items-center bg-neutral-secondary-soft md:flex-row ">
         <li><a href="#" class="text-black "aria-current="page">Home</a></li>
-        <li><a href="#" class=" text-heading  text-blue-500 rounded hover:bg-neutral-tertiary">apprenants</a></li>
+        <li><a href="display.html" class=" text-heading  text-blue-500 rounded hover:bg-neutral-tertiary">apprenants</a></li>
         <li><a href="#" class="text-heading text-blue-500 rounded hover:bg-neutral-tertiary ">retards</a> </li>
         <li><a href="#" class="text-heading text-blue-500 rounded hover:bg-neutral-tertiary ">Historique</a></li>
         <li><button id="change_mode"><img  src="images/sombre.svg"class="w-9 h-10 md:w-10 lg:w-10"></button></li>
@@ -39,24 +39,22 @@
         <div class="card bg-white flex items-center gap-3 sm:gap-4 p-3 sm:p-4 md:p-3 rounded-2xl shadow-md ">
              <img src="/images/utilisateur.svg" alt="" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 lg:w-14 lg:h-14 object-cover rounded shrink-0"/>
              <div class="flex-1 flex flex-col justify-center min-w-0">
-               <h5 class="text-base sm:text-lg md:text-lg font-bold text-heading"><span id="totalstudents">0</span> Students</h5>
-               <p class="text-sm sm:text-base text-neutral-primary">120 Member</p>
-               <button href="#" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
+               <h5 class="text-base sm:text-lg md:text-lg font-bold text-heading">Students</h5>
+               <p  class="text-sm sm:text-base text-neutral-primary"><span id="taille">0</span> Member</p>
+               <a href="display.html" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
                        bg-neutral-secondary-medium border border-default-medium
                        hover:bg-neutral-tertiary-medium text-body
                        text-xs sm:text-sm px-3 py-1.5 sm:px-4 sm:py-2 rounded-base"
                > Read more <svg class="w-3 h-3 sm:w-4 sm:h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">  <path d="M5 12h14m-7-7 7 7-7 7"/> </svg>
-               </button>
+             </a>
              </div>
         </div>
-
         <!-- card 2 -->
 <div class="card bg-white flex items-center gap-3 sm:gap-4 p-3 sm:p-4 md:p-3 rounded-2xl shadow-md">
   <img src="/images/absent.svg" alt="" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 lg:w-14 lg:h-14 object-cover rounded shrink-0"/>
   <div class="flex-1 flex flex-col justify-center min-w-0">
     <h5 class="text-base sm:text-lg text-l font-bold text-heading">  Absence </h5>
-    <p class="text-sm sm:text-base text-neutral-primary"> Absence</p>
-    
+    <p class="text-sm sm:text-base text-neutral-primary"><span id="totalabsence">0</span> Absence</p>
     <button  href="#" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
             bg-neutral-secondary-medium border border-default-medium text-body
             text-xs sm:text-sm px-3 py-1.5 sm:px-4 sm:py-2 rounded-base"
@@ -68,8 +66,8 @@
 <div class="card bg-white flex items-center gap-3 sm:gap-4 p-3 sm:p-4 md:p-3 rounded-2xl shadow-md">
   <img src="/images/en-retard.svg" alt="" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 lg:w-15 lg:h-15 object-cover rounded shrink-0"/>
   <div class="flex-1 flex flex-col justify-center min-w-0">
-    <h5 class="text-base sm:text-lg md:text-l font-bold text-heading">  Retards </h5>
-    <p class="text-sm sm:text-base text-neutral-primary">  13 Member </p>
+    <h5 class="text-base sm:text-lg md:text-l font-bold text-heading">Retards </h5>
+    <p class="text-sm sm:text-base text-neutral-primary"><span id="totalretard">0</span> Member </p>
     <button href="#" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
             bg-neutral-secondary-medium border border-default-medium
             hover:bg-neutral-tertiary-medium text-body
@@ -82,8 +80,8 @@
 <div class="card bg-white flex items-center gap-3 sm:gap-4 p-3 sm:p-4 md:p-3 rounded-2xl shadow-md">
   <img src="/images/historique-des-commandes.svg" alt="" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 lg:w-15 lg:h-15 object-cover rounded shrink-0"/>
   <div class="flex-1 flex flex-col justify-center min-w-0">
-    <h5 class="text-base sm:text-lg md:text-l font-bold text-heading">Historique</h5>
-    <p class="text-sm sm:text-base text-neutral-primary">  +12 Member </p>
+    <h5 class="text-base sm:text-lg md:text-l font-bold text-heading"> Historique</h5>
+    <p class="text-sm sm:text-base text-neutral-primary">  <span id="new_historique">0</span> Member </p>
     <button href="#" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
             bg-neutral-secondary-medium border border-default-medium
             hover:bg-neutral-tertiary-medium text-body
@@ -115,7 +113,7 @@
               <div data-popper-arrow></div>
           </div>
         </h5>
-        <p class="text-heading text-2xl font-semibold">  <span id="totalRows">0</span></p>
+        <p class="text-heading text-2xl font-semibold"><span id="totalRows">0</span></p>
       </div>
       <div>
         <h5 class="inline-flex items-center text-body">hours
@@ -161,60 +159,23 @@
     </button>
   </div>
 </div>
-
-</div>
-<!-- Include this script tag or install `@tailwindplus/elements` via npm: -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script> -->
-<button command="show-modal" commandfor="dialog" class="rounded-md bg-gray-950/5 px-2.5 py-1.5 text-sm font-semibold text-gray-900 hover:bg-gray-950/10">Ajouter</button>
-<el-dialog>
-  <dialog id="dialog" aria-labelledby="dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
-    <el-dialog-backdrop class="fixed inset-0 bg-gray-500/75 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
-    <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
-      <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
-        <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-          <div class="sm:flex sm:items-start">
-            <div class="mx-auto flex size-12 shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:size-10">
-                <img src="images/utilisateur.svg" alt="">
-              </svg>
-            </div>
-            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-              <h3 id="dialog-title" class="text-base font-semibold text-gray-900">Ajouter historique</h3>
-              <div class=" border-b grid gap-2 mt-2 ">
-                <input id="date_input" type="text" class="block w-full p-3 ps-9 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-lg focus:ring-brand focus:border-brand shadow-xs placeholder:text-body" placeholder="Date" required>
-                <input id="absent_input"type="text" class="block w-full p-3 ps-9 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-lg focus:ring-brand focus:border-brand shadow-xs placeholder:text-body" placeholder="Absence" required>
-                <input id="retard_input" type="text" class="block w-full p-3 ps-9 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-lg  focus:ring-brand focus:border-brand shadow-xs placeholder:text-body" placeholder="retard" required>
-                <input id="motif_input" type="text" class="block w-full p-3 ps-9 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-lg  focus:ring-brand focus:border-brand shadow-xs placeholder:text-body" placeholder="motif" required>
-              </div>
-             
-            </div>
-          </div>
-        </div>
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-          <button  id="ajouter_modal"  type="button"  command="close" commandfor="dialog" class="inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-xs sm:ml-3 sm:w-auto">Ajouter</button>
-          <button  type="button" command="close" commandfor="dialog" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
-        </div>
-      </el-dialog-panel>
-    </div>
-  </dialog>
-</el-dialog>
-
 <div class="historique">
 <div class="relative overflow-x-auto bg-white shadow-xs rounded-base border border-default rounded-2xl">
         <table id="historique" class="w-full text-sm text-left rtl:text-right text-body">
             <thead class="text-sm text-body border-b border-default">
-                <tr>
-                    <th scope="col"   class="px-6 py-3 bg-neutral-secondary-soft font-medium"> Date</th>
-                    <th scope="col"   class="px-6 py-3 font-medium">Absence</th>
-                    <th scope="col"   class="px-6 py-3 bg-neutral-secondary-soft font-medium">Retard</th>
-                    <th scope="col"   class="px-6 py-3 font-medium"> Motif</th>
+                <tr class="hover:bg-gray-100 dark:hover:bg-gray-800 transition">
+                    <th scope="col" class="px-6 py-3 bg-neutral-secondary-soft font-medium">Date</th>
+                    <th scope="col" class="px-6 py-3 font-medium">Nombre d’absents</th>
+                    <th scope="col" class="px-6 py-3 bg-neutral-secondary-soft font-medium">Nombre de retardataires</th>
+                    <th scope="col" class="px-6 py-3 font-medium">Action</th>    
                 </tr>
             </thead>
-            <tbody id="tableBody">
-                <tr class="border-b border-default">
-                    <td  id="dateTd"  scope="row" class="px-6 py-4 font-medium text-heading whitespace-nowrap bg-neutral-secondary-soft"></td>
-                    <td  id="absenceTd"class="px-6 py-4" ></td>
-                    <td  id="retardTd" class="px-6 py-4 bg-neutral-secondary-soft"></td>
-                    <td  id="motifTd"  class="px-6 py-4"></td>
+            <tbody id="tableBody" class="divide-y divide-gray-200 dark:divide-gray-700">
+                <tr>
+                    <td  id="dateTd" scope="row"></td>
+                    <td  id="absenceTd"></td>
+                    <td  id="retardTd" ></td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
@@ -222,10 +183,8 @@
 </div>
 </div>
 </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="dashbored.JS"></script>
-
-
-
 </body>
 </html>
