--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <div class="hidden w-full md:block md:w-auto gap-3" id="navbar-default">
       <ul class="font-medium flex flex-col gap-3 items-center bg-neutral-secondary-soft md:flex-row ">
         <li><a href="#" class="text-black "aria-current="page">Home</a></li>
-        <li><a href="#" class=" text-heading  text-blue-500 rounded hover:bg-neutral-tertiary">apprenants</a></li>
+        <li><a href="display.html" class=" text-heading  text-blue-500 rounded hover:bg-neutral-tertiary">apprenants</a></li>
         <li><a href="#" class="text-heading text-blue-500 rounded hover:bg-neutral-tertiary ">retards</a> </li>
         <li><a href="#" class="text-heading text-blue-500 rounded hover:bg-neutral-tertiary ">Historique</a></li>
         <li><button id="change_mode"><img  src="images/sombre.svg"class="w-9 h-10 md:w-10 lg:w-10"></button></li>
@@ -39,14 +39,14 @@
         <div class="card bg-white flex items-center gap-3 sm:gap-4 p-3 sm:p-4 md:p-3 rounded-2xl shadow-md ">
              <img src="/images/utilisateur.svg" alt="" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16 lg:w-14 lg:h-14 object-cover rounded shrink-0"/>
              <div class="flex-1 flex flex-col justify-center min-w-0">
-               <h5 class="text-base sm:text-lg md:text-lg font-bold text-heading"><span id="totalstudents">0</span> Students</h5>
-               <p class="text-sm sm:text-base text-neutral-primary">120 Member</p>
-               <button href="#" type="button"  class="mt-2 inline-flex items-center gap-1.5 self-start
+               <h5 class="text-base sm:text-lg md:text-lg font-bold text-heading"> Students</h5>
+               <p id="taille" class="text-sm sm:text-base text-neutral-primary">120 Member</p>
+               <a href="display.html"  class="mt-2 inline-flex items-center gap-1.5 self-start
                        bg-neutral-secondary-medium border border-default-medium
                        hover:bg-neutral-tertiary-medium text-body
                        text-xs sm:text-sm px-3 py-1.5 sm:px-4 sm:py-2 rounded-base"
                > Read more <svg class="w-3 h-3 sm:w-4 sm:h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">  <path d="M5 12h14m-7-7 7 7-7 7"/> </svg>
-               </button>
+             </a>
              </div>
         </div>
 
@@ -224,6 +224,7 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="dashbored.JS"></script>
+<script src="script.js"></script>
 
 
 
