--- a/profil.html
+++ b/profil.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-
     <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Document</title>
 </head>
-
-<body class="bg-sky-50 p-0" >
- <header class="navbar">
+<body class="bg-sky-50">
+    <header class="navbar">
         <nav class="bg-neutral-primary  w-full z-20 top-0 start-0 border-b border-default">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
                 <a href="DashBoerd.html" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -31,28 +29,13 @@
             </div>
         </nav>
 </header>
-    
-    <h3 class="text-4xl text-center py-2 mb-5">Apprenants</h3>
-    <div class="flex justify-center">
-        <button id="addBtn" class="bg-gray-800 text-white px-2 py-1 mb-1 rounded ">Ajouter</button>
-    </div>
-    <form id="form"></form>
-    <div class="overflow-x-auto flex justify-center">
-        <table class="md:table-fixed border-collapse ">
-            <thead class="bg-sky-500">
-                <tr> 
-                    <th class="border border-gray-900 px-10 py-1">ID</th> 
-                    <th class="border border-gray-900 px-10 py-1">Nom</th> 
-                    <th class="border border-gray-900 px-10 py-1">Prénom</th>
-                    <th class="border border-gray-900 px-10 py-1">Groupe</th>  
-                    <th class="border border-gray-900 px-10 py-1">Actions</th> 
-                </tr>
-            </thead> 
-            <tbody id="TableBody">
-            </tbody>
-        </table>
-    </div>
-    
-<script src="script.js"></script>
+<div class="flex justify-center items-center mt-6">
+<div class="flex flex-col items-center bg-white font-semibold space-y-4  rounded p-6 w-64 ">
+<div><img src="profil-vide-1.jpg" class="rounded-full w-44" </div>
+    <div class="text-center pt-4" id="name">Nom Prenom</div>
+    <div class="text-center pt-4" id="group">Groupe</div>
+    <div class="text-center pt-4" id="status">Status</div>
+</div></div>
+<script src="profil.js"></script>
 </body>
 </html>
